--- a/ProjetoIntegradorRenan/elements.html
+++ b/ProjetoIntegradorRenan/elements.html
@@ -4,6 +4,7 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
+<html lang="pt-BR"></html>
 <html>
 	<head>
 		<title>Elements - Spatial by TEMPLATED</title>
@@ -19,8 +20,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html">Sobre</a></li>
+						<li><a href="elements.html">Todos os Posts</a></li>
 					</ul>
 				</nav>
 			</header>
