--- a/ProjetoIntegradorRenan/generic.html
+++ b/ProjetoIntegradorRenan/generic.html
@@ -4,9 +4,10 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
+<html lang="pt-BR"></html>
 <html>
 	<head>
-		<title>Generic - Spatial by TEMPLATED</title>
+		<title>Sobre</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +20,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html">Sobre</a></li>
+						<li><a href="elements.html">Todos os Posts</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,7 +33,7 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Generic</h2>
+						<h2>Sobre o Site  </h2>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
